--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
